# butter-ai

./: .airules  .gitignore  README.md  package.json  pyproject.toml  pyrightconfig.json  setup.py  tsconfig.json
config/: __init__.py
projects/chess/: run-tourney.sh
projects/chess/bots/: random_bot.py
projects/chess/config/: model_config.yaml
projects/chess/parser/: chunkparsefunc.py  chunkparser.py  dataset.py
projects/chess/parser/proto/: chunk_pb2.py  net_pb2.py
projects/common/config/: __init__.py
projects/love-letter/: .rules  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
projects/love-letter/bots/: gpt_bot.py  gpt_bot_memo.py  random_bot.py
projects/love-letter/config/: gpt_tourney.yaml  model_config.yaml  random_bot.yaml  tourney.yaml
projects/love-letter/engine/: __init__.py
projects/love-letter/gpt/: generate.py  train.py  validate.py
projects/love-letter/gpt/config/: hparams.yaml  model_config.yaml  test_config.yaml
projects/love-letter/gpt/models/: cli.py  config_types.py  dataset.py  gpt.py  gpt_ll.py  gpt_model.py  model.py  tokenizer.py  tokenizer2.py
projects/love-letter/gpt/tests/: test_tokenizer.py
projects/love-letter/src/: run-tourney.ts
projects/love-letter/src/components/: Card.tsx  CardEffect.tsx  Controls.tsx  DeckDisplay.tsx  DiscardPile.tsx  GameBoard.tsx  GameLog.tsx  GameStatus.tsx  PlaybackControls.tsx
projects/love-letter/src/engine/: index.ts
projects/love-letter/src/pages/: index.tsx
projects/love-letter/src/styles/: globals.css
projects/love-letter/src/tourney/: index.ts
projects/love-letter/ts/: run-tourney.ts
projects/love-letter/ts/engine/: index.ts
projects/love-letter/ts/tourney/: index.ts
projects/love-letter/utils/: bot.py  validate.py
