[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "butter-ai"
version = "0.1.0"
description = "Butter AI Games"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.1",
    "numpy>=1.24.0,<2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
gpu = [
    "torch==2.1.2",  # Base package - CUDA version will be installed via URL
]
default = [
    "torch==2.1.2",  # CPU version
]

[tool.setuptools]
package-dir = {"" = "projects"}
packages = ["common", "love-letter"]

[tool.pytest.ini_options]
pythonpath = [
    "projects"
]
