[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "butter-ai"
version = "0.1.0"
description = "Butter AI Games"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "numpy>=2.2.1",
    "tqdm>=4.65.0",
    "pytest>=7.4.0",
    "packaging>=24.2",
    "ninja>=1.11.1.3",
    "flash-attn>=2.7.3",
    "nvidia-tensorrt>=99.0.0"
]

[project.optional-dependencies]
gpu = [
    "torch==2.5.1",  # Base package - CUDA version will be installed via URL
]
default = [
    "torch==2.5.1",  # CPU version
]

[tool.setuptools]
package-dir = {"" = "projects"}
packages = ["common", "love-letter"]

[tool.pytest.ini_options]
pythonpath = [
    "projects"
]
